[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "supplygraph"
version = "0.1.0"
description = "openFDA drug labels -> provenanced, store-neutral knowledge graph"
readme = "README.md"
requires-python = ">=3.10"
# The core pipeline (fetch, parse, resolve, emit, query) is standard-library only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
rdf = ["rdflib>=7", "pyshacl>=0.26"]   # rdf consumer layer only; core stays stdlib
neo4j = ["neo4j>=5"]                    # neo4j consumer layer only; core stays stdlib
rag = ["neo4j>=5"]                      # rag consumer: neo4j driver; llm client is stdlib urllib

[project.scripts]
supplygraph = "supplygraph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.vercel]
# vercel's python builder needs the entrypoint spelled out (api/ask.py is not a
# default location). `handler` is the BaseHTTPRequestHandler subclass in api/ask.py.
entrypoint = "api.ask:handler"

[tool.pytest.ini_options]
# Disable the broken global web3 'pytest_ethereum' plugin; put src/ on the path
# so tests import the package without an install.
addopts = "-p no:pytest_ethereum"
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:rdflib.*",
    "ignore::DeprecationWarning:pyshacl.*",
]
